--- a/FrontTaller/src/app/layout/layout.component.html
+++ b/FrontTaller/src/app/layout/layout.component.html
@@ -1,28 +1,23 @@
-<nz-layout>
-  <nz-sider nzCollapsible nzWidth="200px">
-    <div class="logo"></div>
-    <ul nz-menu nzTheme="dark" nzMode="inline">
-      <li nz-menu-item routerLink="/usuarios">
-        <span nz-icon nzType="pie-chart"></span>
-        <span>Usuarios</span>
-      </li>
-      <li nz-menu-item routerLink="/vehiculos">
-        <span nz-icon nzType="desktop"></span>
-        <span>Vehiculos</span>
-      </li>
-    </ul>
-  </nz-sider>
-  <nz-layout>
-    <nz-header></nz-header>
-    <nz-content>
-      <nz-breadcrumb>
-        <nz-breadcrumb-item>User</nz-breadcrumb-item>
-        <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
-      </nz-breadcrumb>
-      <div class="inner-content">
-        <router-outlet></router-outlet>
-      </div>
-    </nz-content>
-    <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
-  </nz-layout>
-</nz-layout>
+<div>
+  <div>
+    <toolbar></toolbar>
+  </div>
+
+  <div style="display: flex">
+    <sidebar
+      style="width: 150px; background-color: #dfe2ff; padding: 10px"
+    ></sidebar>
+    <content
+      style="
+        padding: 10px;
+        width: calc(100% - 170px);
+        height: calc(100vh - 150px);
+        overflow: auto;
+      "
+    ></content>
+  </div>
+
+  <div>
+    <footer></footer>
+  </div>
+</div>
