--- a/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.scss
+++ b/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.scss
@@ -26,3 +26,14 @@
     padding-top: 10px;
     padding: 10px 20px;
 }
+
+.cls-icon{
+    margin: 0 20px; 
+    cursor: pointer;   
+}
+table{
+    text-align: center;
+    th{
+        text-align: center;
+    }
+}
