--- a/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
+++ b/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
@@ -1,47 +1,12 @@
 <div class="cls-content-page">
-  <div
-    style="
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 30px;
-    "
-  >
-    <mat-form-field class="example-form-field" appearance="outline">
-      <mat-label>Buscar</mat-label>
-      <input
-        matInput
-        type="text"
-        [(ngModel)]="value"
-        (focus)="focusBuscar()"
-        (blur)="blurBuscar()"
-      />
-      <button
-        *ngIf="value"
-        matSuffix
-        mat-icon-button
-        aria-label="Clear"
-        (click)="value = ''"
-      >
-        <mat-icon>close</mat-icon>
-      </button>
-    </mat-form-field>
 
-    <!-- <editor-nombre
-      [nombre]="nombreUsuarioSeleccionado"
-      (salidaCambioNombre)="cambiarNombreUsuario($event)"
-    ></editor-nombre> -->
-  </div>
 
-  <div
-    style="
+  <div style="
       display: inline-flex;
       gap: 10px;
       margin-bottom: 10px;
       flex-wrap: wrap;
-    "
-    [formGroup]="formUser"
-  >
+    " [formGroup]="formUser">
     <div>
       <label for="">Nombre</label>
       <input type="text" formControlName="nombre" />
@@ -62,28 +27,92 @@
       <input type="text" formControlName="tipoUsuario" />
     </div>
 
-    <button
-      (click)="saveUser()"
-      style="color: #fff !important"
-      mat-button
-      color="primary"
-    >
+    <button (click)="saveUser()" style="color: #fff !important" mat-button color="primary">
       Agregar
     </button>
   </div>
 
+  
+  
+
   <div>
+
+    <mat-form-field appearance="standard">
+      <mat-label>Buscar</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. GHT741" #input>
+    </mat-form-field>
+
+
     <table mat-table [dataSource]="datos" class="mat-elevation-z8">
-      <!--- Note that these columns can be defined in any order.
-                    The actual rendered columns are set as a property on the row definition" -->
 
       <!-- Position Column -->
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="telefono">
+        <th mat-header-cell *matHeaderCellDef> Teléfono </th>
+        <td mat-cell *matCellDef="let element"> {{element.telefono}} </td>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="tipoUsuario">
+        <th mat-header-cell *matHeaderCellDef> Tipo de Usuario </th>
+        <td mat-cell *matCellDef="let element"> {{element.tipoUsuario}} </td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="fechaNacimiento">
+        <th mat-header-cell *matHeaderCellDef> Fecha de </th>
+        <td mat-cell *matCellDef="let element"> {{element.fechaNacimiento}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Gestion">
+        <th mat-header-cell *matHeaderCellDef> Gestión </th>
+        <td mat-cell *matCellDef="let element">
+
+
+
+          <mat-icon class="cls-icon" (click)="eliminar()" style="color: red;">delete_forever</mat-icon>
+          <mat-icon class="cls-icon" (click)="editar()" style="color: green;">edit</mat-icon>
+          <mat-icon class="cls-icon" (click)="actualizar()" style="color: blue;">sync</mat-icon>
+
+        </td>
+
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No se encontró "{{input.value}}"</td>
+      </tr>
+
+    </table>
+  </div>
+
+
+
+  <!-- <editor-nombre
+      [nombre]="nombreUsuarioSeleccionado"
+      (salidaCambioNombre)="cambiarNombreUsuario($event)"
+    ></editor-nombre> -->
+
+  <!---- <div>
+    <table mat-table [dataSource]="datos" class="mat-elevation-z8">
+       Note that these columns can be defined in any order.
+                    The actual rendered columns are set as a property on the row definition" 
+
+      
       <ng-container matColumnDef="nombre">
         <th mat-header-cell *matHeaderCellDef>Nombre</th>
         <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
       </ng-container>
 
-      <!-- Name Column -->
+   
       <ng-container matColumnDef="telefono">
         <th mat-header-cell *matHeaderCellDef>Teléfono</th>
         <td mat-cell *matCellDef="let element">
@@ -91,13 +120,13 @@
         </td>
       </ng-container>
 
-      <!-- Weight Column -->
+      
       <ng-container matColumnDef="tipoUsuario">
         <th mat-header-cell *matHeaderCellDef>Tipo</th>
         <td mat-cell *matCellDef="let element">{{ element.tipoUsuario }}</td>
       </ng-container>
 
-      <!-- Symbol Column -->
+     
       <ng-container matColumnDef="fechaNacimiento">
         <th mat-header-cell *matHeaderCellDef>Fecha nacimiento</th>
         <td mat-cell *matCellDef="let element">
@@ -109,4 +138,5 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
+-->
 </div>
