--- a/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
+++ b/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
@@ -1,40 +1,8 @@
+<div>
+  
+</div>
+
 <div class="cls-content-page">
-
-
-  <div style="
-      display: inline-flex;
-      gap: 10px;
-      margin-bottom: 10px;
-      flex-wrap: wrap;
-    " [formGroup]="formUser">
-    <div>
-      <label for="">Nombre</label>
-      <input type="text" formControlName="nombre" />
-    </div>
-
-    <!-- <div>
-      <label for="">Fecha de nacimiento</label>
-      <input type="text" formControlName="fechaNacimiento" />
-    </div> -->
-
-    <div>
-      <label for="">Teléfono</label>
-      <input type="text" formControlName="telefono" />
-    </div>
-
-    <div>
-      <label for="">Tipo</label>
-      <input type="text" formControlName="tipoUsuario" />
-    </div>
-
-    <button (click)="saveUser()" style="color: #fff !important" mat-button color="primary">
-      Agregar
-    </button>
-  </div>
-
-  
-  
-
   <div>
 
     <mat-form-field appearance="standard">
@@ -75,9 +43,9 @@
 
 
 
-          <mat-icon class="cls-icon" (click)="eliminar()" style="color: red;">delete_forever</mat-icon>
+          <mat-icon class="cls-icon" (click)="prueba()" style="color: red;">delete_forever</mat-icon>
           <mat-icon class="cls-icon" (click)="editar()" style="color: green;">edit</mat-icon>
-          <mat-icon class="cls-icon" (click)="actualizar()" style="color: blue;">sync</mat-icon>
+          <mat-icon class="cls-icon"  style="color: blue;">sync</mat-icon>
 
         </td>
 
