--- a/FrontTaller/src/app/crud-usuarios/editar.html
+++ b/FrontTaller/src/app/crud-usuarios/editar.html
@@ -1,22 +1,67 @@
 <div>
-    <div>
-        <h1 mat-dialog-title>Actualizar registro</h1>
-    </div>
+  <h3>Actualiza elemento</h3>
 </div>
+<div>
+  <form class="row g-3 needs-validation" novalidate>
+    <div style="    margin: 20px 0 10px;" class="row ">
+      <div class="col">
+        <label for="validationCustom01" class="form-label">Nombre</label>
+      </div>
+      <div class="col">
+        <input type="text" class="form-control" id="validationCustom01" required />
+        <div class="invalid-feedback">Campo requerido</div>
+      </div>
+    </div>
+    <div style="    margin: 5px 0 10px;" class="row">
+      <div class="col">
+        <label for="validationCustom02" class="form-label">Teléfono</label>
+      </div>
 
-<div style="display: flex; flex-wrap: wrap; align-items: center; margin: 10px; border: solid 1px; padding: 10px;">
-    
-        <label style="padding: 5px; font-size: 15px;" for="">Nombre</label>
-        <input style="background: #2a322a1f; border-radius: 5px; border: 0px; padding: 7px; margin: 10px;" type="text">
-        
-        <label style="padding: 5px; font-size: 15px;" for="">Teléfono</label>
-        <input style="background: #2a322a1f; border-radius: 5px; border: 0px; padding: 7px; margin: 10px;" type="text">
-        <label style="padding: 5px; font-size: 15px;" for="">Tipo de usuario</label>
-        <input style="background: #2a322a1f; border-radius: 5px; border: 0px; padding: 7px; margin: 10px;" type="text">
-        <label style="padding: 5px; font-size: 15px;" for="">Fecha</label>
-        <input style="background: #2a322a1f; border-radius: 5px; border: 0px; padding: 7px; margin: 10px;" type="text">
-        <label style="padding: 5px; font-size: 15px;" for="">Gestión</label>
-        <input style="background: #2a322a1f; border-radius: 5px; border: 0px; padding: 7px; margin: 10px;" type="text">
-    
-        
+      <div class="col">
+        <input type="text" class="form-control" id="validationCustom02" required />
+        <div class="invalid-feedback">Campo requerido</div>
+      </div>
+    </div>
+    <div style="    margin: 5px 0 10px;" class="row">
+      <div class="col">
+        <label for="validationCustomUsername" class="form-label">Tipo usuario</label>
+      </div>
+
+      <div class="col">
+        <div class="input-group has-validation">
+          <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend"
+            required />
+          <div class="invalid-feedback">Campo requerido.</div>
+        </div>
+      </div>
+    </div>
+
+    <div style="    margin: 5px 0 10px;" class="row">
+      <div class="col">
+        <label for="validationCustom03" class="form-label">Fecha de nacimiento</label>
+      </div>
+      <div class="col">
+        <input type="date" class="form-control" id="validationCustom03" required />
+        <div class="invalid-feedback">Campo requerido.</div>
+      </div>
+    </div>
+
+    <div style="    margin: 5px 0 10px;" class="row">
+      <div class="col">
+        <label for="validationCustom04" class="form-label">Sede</label>
+      </div>
+
+      <div class="col">
+        <select class="form-select" id="validationCustom04" required>
+          <option selected disabled value="">Choose...</option>
+          <option>...</option>
+        </select>
+        <div class="invalid-feedback">Campo requerido.</div>
+      </div>      
+    </div>
+
+    <div class="col-12">
+      <button class="btn btn-primary" type="submit">Actualizar </button>
+    </div>
+  </form>
 </div>
