--- a/FrontTaller/src/app/layout/toolbar/toolbar.component.html
+++ b/FrontTaller/src/app/layout/toolbar/toolbar.component.html
@@ -1,5 +1,27 @@
 <mat-toolbar style="display: flex;
 justify-content: space-between; align-items: center;">
     <span>Encabezado</span>
-    <mat-icon style="font-size: 40px;">supervised_user_circle</mat-icon>
+    <div>
+        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+            <mat-icon style="font-size: 50px;">supervised_user_circle</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item>
+              <mat-icon>group_add</mat-icon>
+              <span>Agregar usuario</span>
+            </button>
+            <button mat-menu-item>
+              <mat-icon>nature_people</mat-icon>
+              <span>Agregar mécanico</span>
+            </button>
+            <button mat-menu-item disabled>
+              <mat-icon>add_shopping_cart</mat-icon>
+              <span>Gestionar inventario</span>
+            </button>
+          </mat-menu>
+    </div>
 </mat-toolbar>
+
+
+
+
