--- a/FrontTaller/src/app/crud-vehiculos/crud-vehiculos.component.html
+++ b/FrontTaller/src/app/crud-vehiculos/crud-vehiculos.component.html
@@ -1,1 +1,112 @@
-<p>crud-vehiculos works!</p>
+<p>vehiculos works!</p>
+
+<div>
+  
+</div>
+
+<div class="cls-content-page">
+  <div>
+
+    <mat-form-field appearance="standard">
+      <mat-label>Buscar</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. GHT741" #input>
+    </mat-form-field>
+
+
+    <table mat-table [dataSource]="datos" class="mat-elevation-z8">
+
+      <!-- Position Column -->
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef> Placa </th>
+        <td mat-cell *matCellDef="let element"> {{element.idPlaca}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="telefono">
+        <th mat-header-cell *matHeaderCellDef> Propietario </th>
+        <td mat-cell *matCellDef="let element"> {{element.propietarioId}} </td>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="tipoUsuario">
+        <th mat-header-cell *matHeaderCellDef> Marca </th>
+        <td mat-cell *matCellDef="let element"> {{element.marca}} </td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="fechaNacimiento">
+        <th mat-header-cell *matHeaderCellDef> C.C. </th>
+        <td mat-cell *matCellDef="let element"> {{element.cilindraje}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Gestion">
+        <th mat-header-cell *matHeaderCellDef> Gestión </th>
+        <td mat-cell *matCellDef="let element">
+
+
+
+          <mat-icon class="cls-icon" (click)="prueba()" style="color: red;">delete_forever</mat-icon>
+          <mat-icon class="cls-icon" (click)="editar()" style="color: green;">edit</mat-icon>
+          <mat-icon class="cls-icon"  style="color: blue;">sync</mat-icon>
+
+        </td>
+
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No se encontró "{{input.value}}"</td>
+      </tr>
+
+    </table>
+  </div>
+
+
+
+  <!-- <editor-nombre
+      [nombre]="nombreUsuarioSeleccionado"
+      (salidaCambioNombre)="cambiarNombreUsuario($event)"
+    ></editor-nombre> -->
+
+  <!---- <div>
+    <table mat-table [dataSource]="datos" class="mat-elevation-z8">
+       Note that these columns can be defined in any order.
+                    The actual rendered columns are set as a property on the row definition" 
+
+      
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
+      </ng-container>
+
+   
+      <ng-container matColumnDef="telefono">
+        <th mat-header-cell *matHeaderCellDef>Teléfono</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.telefono }}
+        </td>
+      </ng-container>
+
+      
+      <ng-container matColumnDef="tipoUsuario">
+        <th mat-header-cell *matHeaderCellDef>Tipo</th>
+        <td mat-cell *matCellDef="let element">{{ element.tipoUsuario }}</td>
+      </ng-container>
+
+     
+      <ng-container matColumnDef="fechaNacimiento">
+        <th mat-header-cell *matHeaderCellDef>Fecha nacimiento</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.fechaNacimiento }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+-->
+</div>
