--- a/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
+++ b/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
@@ -1,5 +1,29 @@
-<div>
-  
+<div style="align-items: center;
+display: flex;
+justify-content: flex-end;">
+  <button style="width: 50px;
+  height: 50px;" mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+      <mat-icon style="    font-size: 34px;
+      width: 100%;">menu</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="nuevocliente()">
+        <mat-icon>group_add</mat-icon>
+        <span>Agregar usuario</span>
+      </button>
+      <button mat-menu-item (click)="nuevomeca()">
+        <mat-icon>nature_people</mat-icon>
+        <span>Agregar mécanico</span>
+      </button>
+      <button mat-menu-item disabled>
+        <mat-icon>add_shopping_cart</mat-icon>
+        <span>Gestionar inventario</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon style="color: #f44336;">exit_to_app</mat-icon>
+        <span>Salir</span>
+      </button>
+    </mat-menu>
 </div>
 
 <div class="cls-content-page">
@@ -45,7 +69,7 @@
 
           <mat-icon class="cls-icon" (click)="prueba()" style="color: red;">delete_forever</mat-icon>
           <mat-icon class="cls-icon" (click)="editar()" style="color: green;">edit</mat-icon>
-          <mat-icon class="cls-icon"  style="color: blue;">sync</mat-icon>
+      
 
         </td>
 
