--- a/FrontTaller/src/app/crud-vehiculos/editar.html
+++ b/FrontTaller/src/app/crud-vehiculos/editar.html
@@ -1,36 +1,44 @@
 <div>
-  <h3>Actualiza elemento</h3>
+  <h3>Actualizar vehículo</h3>
 </div>
 <div>
   <form class="row g-3 needs-validation" novalidate>
+
     <div style="    margin: 20px 0 10px;" class="row ">
       <div class="col">
-        <label for="validationCustom01" class="form-label">Nombre</label>
+        <label for="validationCustom01" class="form-label">Cedula</label>
       </div>
       <div class="col">
         <input type="text" class="form-control" id="validationCustom01" required />
         <div class="invalid-feedback">Campo requerido</div>
       </div>
     </div>
+
     <div style="    margin: 5px 0 10px;" class="row">
       <div class="col">
-        <label for="validationCustom02" class="form-label">Teléfono</label>
+        <label for="validationCustom02" class="form-label">Tipo de vehículo</label>
       </div>
-
       <div class="col">
-        <input type="text" class="form-control" id="validationCustom02" required />
+        <select class="form-select" id="validationCustom04" required>
+          <option selected disabled value="">Seleccionar.</option>
+          <option>Campero</option>
+          <option>Bus</option>
+        </select>
         <div class="invalid-feedback">Campo requerido</div>
       </div>
     </div>
+
     <div style="    margin: 5px 0 10px;" class="row">
       <div class="col">
-        <label for="validationCustomUsername" class="form-label">Tipo usuario</label>
+        <label for="validationCustomUsername" class="form-label">Marca</label>
       </div>
-
       <div class="col">
         <div class="input-group has-validation">
-          <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend"
-            required />
+          <select class="form-select" id="validationCustom04" required>
+            <option selected disabled value="">Seleccionar.</option>
+            <option>Ford</option>
+            <option>Chevrolet</option>
+          </select>
           <div class="invalid-feedback">Campo requerido.</div>
         </div>
       </div>
@@ -38,30 +46,44 @@
 
     <div style="    margin: 5px 0 10px;" class="row">
       <div class="col">
-        <label for="validationCustom03" class="form-label">Fecha de nacimiento</label>
+        <label for="validationCustom03" class="form-label">Cilindraje</label>
       </div>
       <div class="col">
-        <input type="date" class="form-control" id="validationCustom03" required />
+        <select class="form-select" id="validationCustom04" required>
+          <option selected disabled value="">Seleccionar.</option>
+          <option>1600</option>
+          <option>2000</option>
+        </select>
         <div class="invalid-feedback">Campo requerido.</div>
       </div>
     </div>
 
     <div style="    margin: 5px 0 10px;" class="row">
       <div class="col">
-        <label for="validationCustom04" class="form-label">Sede</label>
+        <label for="validationCustom04" class="form-label">Propietario</label>
       </div>
+      <div class="col">
+        <input type="text" class="form-control" id="validationCustom01" required />
+        <div class="invalid-feedback">Campo requerido.</div>
+      </div>      
+    </div>
 
+    <div style="    margin: 5px 0 10px;" class="row">
+      <div class="col">
+        <label for="validationCustom04" class="form-label">Modelo</label>
+      </div>
       <div class="col">
         <select class="form-select" id="validationCustom04" required>
-          <option selected disabled value="">Choose...</option>
-          <option>...</option>
+          <option selected disabled value="">Seleccionar.</option>
+          <option>2001</option>
+          <option>2002</option>
         </select>
         <div class="invalid-feedback">Campo requerido.</div>
       </div>      
     </div>
 
     <div class="col-12">
-      <button class="btn btn-primary" type="submit">Actualizar </button>
+      <button (click)="guardar()" class="btn btn-primary" type="button">Actualizar </button>
     </div>
   </form>
 </div>
