--- a/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
+++ b/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
@@ -38,27 +38,39 @@ justify-content: flex-end;">
     <table mat-table [dataSource]="datos" class="mat-elevation-z8">
 
       <!-- Position Column -->
+      <ng-container matColumnDef="idPropietario">
+        <th mat-header-cell *matHeaderCellDef> Cedula </th>
+        <td mat-cell *matCellDef="let element"> {{element.idPropietario}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
       <ng-container matColumnDef="nombre">
         <th mat-header-cell *matHeaderCellDef> Nombre </th>
         <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
       </ng-container>
 
-      <!-- Name Column -->
+      <!-- Weight Column -->
       <ng-container matColumnDef="telefono">
         <th mat-header-cell *matHeaderCellDef> Teléfono </th>
         <td mat-cell *matCellDef="let element"> {{element.telefono}} </td>
       </ng-container>
 
-      <!-- Weight Column -->
-      <ng-container matColumnDef="tipoUsuario">
-        <th mat-header-cell *matHeaderCellDef> Tipo de Usuario </th>
-        <td mat-cell *matCellDef="let element"> {{element.tipoUsuario}} </td>
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="correo">
+        <th mat-header-cell *matHeaderCellDef> E-mail </th>
+        <td mat-cell *matCellDef="let element"> {{element.correo}} </td>
       </ng-container>
 
       <!-- Symbol Column -->
-      <ng-container matColumnDef="fechaNacimiento">
-        <th mat-header-cell *matHeaderCellDef> Fecha de </th>
-        <td mat-cell *matCellDef="let element"> {{element.fechaNacimiento}} </td>
+      <ng-container matColumnDef="ciudad">
+        <th mat-header-cell *matHeaderCellDef> Ciudad </th>
+        <td mat-cell *matCellDef="let element"> {{element.ciudad}} </td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="sedeId">
+        <th mat-header-cell *matHeaderCellDef> Sede asignada </th>
+        <td mat-cell *matCellDef="let element"> {{element.sedeId}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Gestion">
