Actualizacion de delete user y vehiculo

--- a/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
+++ b/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
@@ -79,7 +79,7 @@ justify-content: flex-end;">
 
 
 
-          <mat-icon class="cls-icon" (click)="prueba()" style="color: red;">delete_forever</mat-icon>
+          <mat-icon class="cls-icon" (click)="deleteUser(element.idPropietario)" style="color: red;">delete_forever</mat-icon>
           <mat-icon class="cls-icon" (click)="editar()" style="color: green;">edit</mat-icon>
       
 
