--- a/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
+++ b/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
@@ -45,7 +45,7 @@ justify-content: flex-end;">
 
       <!-- Name Column -->
       <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <th mat-header-cell *matHeaderCellDef> Nombres </th>
         <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
       </ng-container>
 
