--- a/FrontTaller/src/app/crud-usuarios/datacliente.html
+++ b/FrontTaller/src/app/crud-usuarios/datacliente.html
@@ -52,7 +52,7 @@
 
 
 
-              <mat-icon class="cls-icon" (click)="prueba()" style="color: red;">delete_forever</mat-icon>
+              <mat-icon class="cls-icon" (click)="deleteUser()" style="color: red;">delete_forever</mat-icon>
               <mat-icon class="cls-icon" (click)="editar()" style="color: green;">edit</mat-icon>
 
 
