--- a/FrontTaller/src/app/crud-vehiculos/crud-vehiculos.component.html
+++ b/FrontTaller/src/app/crud-vehiculos/crud-vehiculos.component.html
@@ -18,75 +18,81 @@ justify-content: flex-end;">
     </mat-menu>
 </div>
 
+<div>
+  <div style="margin: 15px;">
+    <div class="cls-content-page">
 
-<div class="cls-content-page">
-  <div>
+      <div>
+        <mat-form-field appearance="standard">
+          <mat-label>Buscar</mat-label>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Ex. GHT741" #input>
+        </mat-form-field>
+      </div>
 
-    <mat-form-field appearance="standard">
-      <mat-label>Buscar</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. GHT741" #input>
-    </mat-form-field>
-
-
-    <table mat-table [dataSource]="datos" class="mat-elevation-z8">
-
-      <!-- Position Column -->
-      <ng-container matColumnDef="idPlaca">
-        <th mat-header-cell *matHeaderCellDef> Placa </th>
-        <td mat-cell *matCellDef="let element"> {{element.idPlaca}} </td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="tipo">
-        <th mat-header-cell *matHeaderCellDef> Tipo de vehículo </th>
-        <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
-      </ng-container>
-
-      <!-- Weight Column -->
-      <ng-container matColumnDef="marca">
-        <th mat-header-cell *matHeaderCellDef> Marca </th>
-        <td mat-cell *matCellDef="let element"> {{element.marca}} </td>
-      </ng-container>
-
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="cilindraje">
-        <th mat-header-cell *matHeaderCellDef> Cilindraje </th>
-        <td mat-cell *matCellDef="let element"> {{element.cilindraje}} </td>
-      </ng-container>
-
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="propietarioId">
-        <th mat-header-cell *matHeaderCellDef> Propietario </th>
-        <td mat-cell *matCellDef="let element"> {{element.propietarioId}} </td>
-      </ng-container>
-
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="anio">
-        <th mat-header-cell *matHeaderCellDef> Modelo </th>
-        <td mat-cell *matCellDef="let element"> {{element.anio}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="Gestion">
-        <th mat-header-cell *matHeaderCellDef> Gestión </th>
-        <td mat-cell *matCellDef="let element">
-
-          <mat-icon class="cls-icon" (click)="deleteVahiculo(element.idPlaca)" style="color: red;">delete_forever</mat-icon>
-          <mat-icon class="cls-icon" (click)="editar()" style="color: green;">edit</mat-icon>
-          <mat-icon class="cls-icon" (click)="trabajo()" style="color: blue;">settings</mat-icon>
-          
-        </td>
-
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-      <!-- Row shown when there is no matching data. -->
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No se encontró "{{input.value}}"</td>
-      </tr>
-
-    </table>
+      <div style="padding: 10px; border: solid 1px #7e897e61; overflow: auto; height: 290px; ">
+        <table mat-table [dataSource]="datos" class="mat-elevation-z8">
+  
+          <!-- Position Column -->
+          <ng-container matColumnDef="idPlaca">
+            <th mat-header-cell *matHeaderCellDef> Placa </th>
+            <td mat-cell *matCellDef="let element"> {{element.idPlaca}} </td>
+          </ng-container>
+  
+          <!-- Name Column -->
+          <ng-container matColumnDef="tipo">
+            <th mat-header-cell *matHeaderCellDef> Tipo de vehículo </th>
+            <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
+          </ng-container>
+  
+          <!-- Weight Column -->
+          <ng-container matColumnDef="marca">
+            <th mat-header-cell *matHeaderCellDef> Marca </th>
+            <td mat-cell *matCellDef="let element"> {{element.marca}} </td>
+          </ng-container>
+  
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="cilindraje">
+            <th mat-header-cell *matHeaderCellDef> Cilindraje </th>
+            <td mat-cell *matCellDef="let element"> {{element.cilindraje}} </td>
+          </ng-container>
+  
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="propietarioId">
+            <th mat-header-cell *matHeaderCellDef> Propietario </th>
+            <td mat-cell *matCellDef="let element"> {{element.propietarioId}} </td>
+          </ng-container>
+  
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="anio">
+            <th mat-header-cell *matHeaderCellDef> Modelo </th>
+            <td mat-cell *matCellDef="let element"> {{element.anio}} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="Gestion">
+            <th mat-header-cell *matHeaderCellDef> Gestión </th>
+            <td mat-cell *matCellDef="let element">
+  
+              <mat-icon class="cls-icon" (click)="deleteVahiculo(element.idPlaca)" style="color: red;">delete_forever</mat-icon>
+              <mat-icon class="cls-icon" (click)="editar()" style="color: green;">edit</mat-icon>
+              <mat-icon class="cls-icon" (click)="trabajo()" style="color: blue;">settings</mat-icon>
+              
+            </td>
+  
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No se encontró "{{input.value}}"</td>
+          </tr>
+  
+        </table>
+      </div>
+    </div>
   </div>
+  
 </div>
+  
 
