--- a/FrontTaller/src/app/crud-usuarios/nuevo-clie.html
+++ b/FrontTaller/src/app/crud-usuarios/nuevo-clie.html
@@ -2,9 +2,11 @@
     <div style="    background: blue;
     color: white;
     height: 27px;">
-        <h3>Agregar cliente</h3>
+       <h3>Agregar cliente</h3>
     </div>
-    <div>
+
+    <!--  <div  [formGroup]="formUser" >
+
         <form style="    margin: 20px 0 10px;" class="row g-3 needs-validation" novalidate>
 
             <div style="    margin: 5px 0 10px;" class="row">
@@ -207,10 +209,10 @@
             </div>
 
             <div class="col-12">
-                <!--se debe cambiar el submint por un button pero en el aler que haga el submint-->
+                se debe cambiar el submint por un button pero en el aler que haga el submint-
                 <button (click)="guardar()"  style="width: 32%;" class="btn btn-outline-success" type="button">Agregar </button>
                 
             </div>
         </form>
-    </div>
+    </div> -->
 </div>
