swal para agregar

--- a/FrontTaller/src/app/crud-usuarios/nuevo-clie.html
+++ b/FrontTaller/src/app/crud-usuarios/nuevo-clie.html
@@ -5,7 +5,7 @@
        <h3>Agregar cliente</h3>
     </div>
 
-    <!--  <div  [formGroup]="formUser" >
+    <div >
 
         <form style="    margin: 20px 0 10px;" class="row g-3 needs-validation" novalidate>
 
@@ -209,10 +209,10 @@
             </div>
 
             <div class="col-12">
-                se debe cambiar el submint por un button pero en el aler que haga el submint-
+                <!-- se debe cambiar el submint por un button pero en el aler que haga el submint- -->
                 <button (click)="guardar()"  style="width: 32%;" class="btn btn-outline-success" type="button">Agregar </button>
                 
             </div>
         </form>
-    </div> -->
+    </div> 
 </div>
