--- a/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
+++ b/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
@@ -7,7 +7,7 @@ justify-content: flex-end;">
       width: 100%;">menu</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
-    <button mat-menu-item (click)="nuevocliente()">
+    <button data-bs-toggle="modal" data-bs-target="#staticBackdrop" mat-menu-item>
       <mat-icon>group_add</mat-icon>
       <span>Agregar usuario</span>
     </button>
@@ -105,7 +105,6 @@ justify-content: flex-end;">
   </div>
 </div>
 
-
 <div style="padding: 0 0 0 15px;">
   <button style=" margin-inline: 6px; height: 28px; width: 84px; padding: 3px;" type="button"
     class="btn btn-outline-success">Clientes</button>
@@ -116,82 +115,141 @@ justify-content: flex-end;">
   <button style=" margin-inline: 6px; height: 28px; width: 84px; padding: 3px;" type="button"
     class="btn btn-outline-success">Revisiones</button>
 </div>
-<div>
 
 
-        <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formUser" >
-            <div class="col">
-                <label for="validationCustom01" class="form-label">Cedula</label>
-            </div>
-            <div class="col">
-                <input type="text" class="form-control" formControlName="idPropietario"  />
-                <div class="invalid-feedback">Campo requerido</div>
-            </div>
-        </div>
 
-        <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formUser">
+
+<!-----esto abre el primero modal el de registro de cliente-->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+  aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Registro de usuario</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!--cuerpor del from-->
+        <div>
+
+          <div style="    margin: 5px 0 10px;" class="row">
             <div class="col">
-                <label for="validationCustom01" class="form-label">Nombre</label>
+              <label for="validationCustom01" class="form-label">Tipo de documento</label>
             </div>
             <div class="col">
-                <input type="text" class="form-control" formControlName="nombre" id="validationCustom01" required />
-                <div class="invalid-feedback">Campo requerido</div>
+              <select class="form-select" id="validationCustom04" required>
+                <option selected disabled value="">Seleccionar</option>
+                <option>CC</option>
+                <option>Pasasporte</option>
+              </select>
+              <div class="invalid-feedback">Campo requerido</div>
             </div>
-        </div>
-        <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formUser">
+          </div>
+
+          <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formUser">
             <div class="col">
-                <label for="validationCustom02" class="form-label" >Teléfono</label>
+              <label for="validationCustom01" class="form-label">Cedula</label>
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" formControlName="idPropietario" />
+              <div class="invalid-feedback">Campo requerido</div>
+            </div>
+          </div>
+
+          <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formUser">
+            <div class="col">
+              <label for="validationCustom01" class="form-label">Nombre</label>
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" formControlName="nombre" id="validationCustom01" required />
+              <div class="invalid-feedback">Campo requerido</div>
+            </div>
+          </div>
+
+          <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formUser">
+            <div class="col">
+              <label for="validationCustom02" class="form-label">Teléfono</label>
             </div>
 
             <div class="col">
-                <input type="text" class="form-control" formControlName="telefono" id="validationCustom02" required />
-                <div class="invalid-feedback">Campo requerido</div>
+              <input type="text" class="form-control" formControlName="telefono" id="validationCustom02" required />
+              <div class="invalid-feedback">Campo requerido</div>
             </div>
-        </div>
+          </div>
 
-        <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formUser">
+          <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formUser">
             <div class="col">
-                <label for="validationCustom03" class="form-label" >Fecha de nacimiento</label>
+              <label for="validationCustom03" class="form-label">Fecha de nacimiento</label>
             </div>
             <div class="col">
-                <input type="date" class="form-control" id="validationCustom03"  required />
+              <input type="date" class="form-control" id="validationCustom03" required />
+              <div class="invalid-feedback">Campo requerido.</div>
+            </div>
+          </div>
+
+          <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formUser">
+            <div class="col">
+              <label for="validationCustom04" class="form-label">Ciudad</label>
+            </div>
+
+            <div class="col">
+              <select class="form-select" id="validationCustom04" formControlName="ciudad" required>
+                <option selected disabled value="">Seleccionar</option>
+                <option>...</option>
+              </select>
+              <div class="invalid-feedback">Campo requerido.</div>
+            </div>
+          </div>
+
+          <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formUser">
+            <div class="col">
+              <label for="validationCustomUsername" class="form-label">Correo</label>
+            </div>
+
+            <div class="col">
+              <div class="input-group has-validation">
+                <input type="email" class="form-control" formControlName="correo" id="validationCustomUsername"
+                  aria-describedby="inputGroupPrepend" required />
                 <div class="invalid-feedback">Campo requerido.</div>
+              </div>
             </div>
+
+          </div>
+
         </div>
+        <!--fin del cuerpo del modal-->
+      </div>
+      <div style="padding: 0 0 10px 10px">
+        <button data-bs-dismiss="modal" (click)="saveUser()" style="width: 32%; ;" class="btn btn-outline-success" type="button">Agregar
+        </button>
+        <!-- este boton lo que hace es guardar y arrancar el segundo modal
+          <button data-bs-target="#exampleModalToggle2" data-bs-toggle="modal" (click)="saveUser()" style="width: 32%; ;" class="btn btn-outline-success" type="button">Agregar
+        </button>
+        -->
+      </div>
+    </div>
+  </div>
+</div>
+<!-----esto abre el primero modal el de registro de cliente-->
 
-        <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formUser">
-            <div class="col">
-                <label for="validationCustom04" class="form-label" >Ciudad</label>
-            </div>
 
-            <div class="col">
-                <select class="form-select" id="validationCustom04" formControlName="ciudad" required>
-                    <option selected disabled value="">Seleccionar</option>
-                    <option>...</option>
-                </select>
-                <div class="invalid-feedback">Campo requerido.</div>
-            </div>
+
+<!---------------------esto abre el modal de lo vehiculos-->
+<!-- Modal 
+  <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Registro de vehiculo para cliente registrado</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formUser">
-            <div class="col">
-                <label for="validationCustomUsername" class="form-label">Correo</label>
-            </div>
-
-            <div class="col">
-                <div class="input-group has-validation">
-                    <input type="email" class="form-control" formControlName="correo" id="validationCustomUsername"
-                        aria-describedby="inputGroupPrepend" required />
-                    <div class="invalid-feedback">Campo requerido.</div>
-                </div>
-            </div>
-       
-
-        <div class="col-12">
-          
-            <button (click)="saveUser()"  style="width: 32%;" class="btn btn-outline-success" type="button">Agregar </button>
-          </div> 
-        </div> 
-</div> 
-
-
-<!--<crud-vehiculos></crud-vehiculos>-->
+        <div class="modal-body">
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back to first</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  -->
+<!---------------------esto abre el modal de lo vehiculos-->
