--- a/FrontTaller/src/app/layout/toolbar/toolbar.component.html
+++ b/FrontTaller/src/app/layout/toolbar/toolbar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar style="display: flex;
-justify-content: space-between; align-items: center;">
+justify-content: space-between; align-items: center; background: #00a1ff99;;
+height: 37px;">
     <span>Enlekema</span>
 </mat-toolbar>
 
