--- a/FrontTaller/src/app/crud-vehiculos/crud-vehiculos.component.html
+++ b/FrontTaller/src/app/crud-vehiculos/crud-vehiculos.component.html
@@ -7,7 +7,7 @@ justify-content: flex-end;">
       width: 100%;">menu</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item (click)="nuevovehi()">
+      <button data-bs-toggle="modal" data-bs-target="#staticBackdrop" mat-menu-item>
         <mat-icon>directions_car</mat-icon>
         <span>Agregar vehículo</span>
       </button>
@@ -94,5 +94,155 @@ justify-content: flex-end;">
   </div>
   
 </div>
-  
+
+
+
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+  aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Registro de vehículo</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body ">
+        <!--cuerpor del from-->
+        <div>
+          <div>
+              <form class="row g-3 needs-validation" novalidate>
+      
+                  <div style="    background: blue;
+                  color: white;
+                  height: 27px;">
+                      <h3>Agregar vehiculo</h3>
+                  </div>
+                  <div style="    margin: 20px 0 10px;" class="row ">
+                      <div class="col">
+                          <label for="validationCustom01" class="form-label">Placa</label>
+                      </div>
+                      <div class="col">
+                          <input type="text" class="form-control" id="validationCustom01" required />
+                          <div class="invalid-feedback">Campo requerido</div>
+                      </div>
+                  </div>
+      
+                  <div style="    margin: 5px 0 10px;" class="row ">
+                      <div class="col">
+                          <label for="validationCustom01" class="form-label">Tipo de vehículo</label>
+                      </div>
+                      <div class="col">
+                          <select class="form-select" id="validationCustom04" required>
+                              <option selected disabled value="">Seleccionar</option>
+                              <option>Campero</option>
+                              <option>Bus</option>
+                          </select>
+                          <div class="invalid-feedback">Campo requerido</div>
+                      </div>
+                  </div>
+      
+                  <div style="    margin: 5px 0 10px;" class="row ">
+                      <div class="col">
+                          <label for="validationCustom01" class="form-label">Marca</label>
+                      </div>
+                      <div class="col">
+                          <select class="form-select" id="validationCustom04" required>
+                              <option selected disabled value="">Seleccionar</option>
+                              <option>Jeep</option>
+                              <option>Mazda</option>
+                              <option>Ford</option>
+                          </select>
+                          <div class="invalid-feedback">Campo requerido</div>
+                      </div>
+                  </div>
+                  <div style="    margin: 5px 0 10px;" class="row">
+                      <div class="col">
+                          <label for="validationCustom02" class="form-label">Modelo</label>
+                      </div>
+      
+                      <div class="col">
+                          <input type="text" class="form-control" id="validationCustom02" required />
+                          <div class="invalid-feedback">Campo requerido</div>
+                      </div>
+                  </div>
+      
+                  <div style="    margin: 5px 0 10px;" class="row">
+                      <div class="col">
+                          <label for="validationCustom03" class="form-label">Capacidad</label>
+                      </div>
+                      <div class="col">
+                          <select class="form-select" id="validationCustom04" required>
+                              <option selected disabled value="">Seleccionar</option>
+                              <option>2</option>
+                              <option>4</option>
+                              <option>6</option>
+                          </select>
+                          <div class="invalid-feedback">Campo requerido.</div>
+                      </div>
+                  </div>
+      
+                  <div style="    margin: 5px 0 10px;" class="row">
+                      <div class="col">
+                          <label for="validationCustom04" class="form-label">Cilindraje</label>
+                      </div>
+      
+                      <div class="col">
+                          <select class="form-select" id="validationCustom04" required>
+                              <option selected disabled value="">Seleccionar</option>
+                              <option>1600</option>
+                              <option>2000</option>
+                          </select>
+                          <div class="invalid-feedback">Campo requerido.</div>
+                      </div>
+                  </div>
+      
+                  <div style="    margin: 5px 0 10px;" class="row">
+                      <div class="col">
+                          <label for="validationCustomUsername" class="form-label">Pais</label>
+                      </div>
+      
+                      <div class="col">
+                          <div class="input-group has-validation">
+                              <select class="form-select" id="validationCustom04" required>
+                                  <option selected disabled value="">Seleccionar</option>
+                                  <option>EEUU</option>
+                                  <option>China</option>
+                                  <option>Artico</option>
+                              </select>
+                              <div class="invalid-feedback">Campo requerido.</div>
+                          </div>
+                      </div>
+                  </div>
+      
+                  <div style="    margin: 5px 0 10px;" class="row">
+                      <div class="col">
+                          <label for="validationCustomUsername" class="form-label">Accesorios adicionales?</label>
+                      </div>
+                      <div class="col">
+                          <div class="input-group has-validation">
+                              <select class="form-select" id="validationCustom04" required>
+                                  <option selected disabled value="">Seleccionar</option>
+                                  <option>Si</option>
+                                  <option>No</option>
+                                  <option>No lo sé, tu dime</option>
+                              </select>
+                              <div class="invalid-feedback">Campo requerido.</div>
+                          </div>
+                      </div>
+                  </div>
+              </form>
+          </div>
+      </div>
+        <!--fin del cuerpo del modal-->
+      </div>
+      <div style="padding: 0 0 10px 10px">
+        <button data-bs-dismiss="modal" (click)="saveUser()" style="width: 32%; ;" class="btn btn-outline-success" type="button">Agregar
+        </button>
+        <!-- este boton lo que hace es guardar y arrancar el segundo modal
+          <button data-bs-target="#exampleModalToggle2" data-bs-toggle="modal" (click)="saveUser()" style="width: 32%; ;" class="btn btn-outline-success" type="button">Agregar
+        </button>
+        -->
+      </div>
+    </div>
+  </div>
+</div>
 
